--- a/src/app/features/layout/navbar/navbar.html
+++ b/src/app/features/layout/navbar/navbar.html
@@ -19,10 +19,10 @@
       <div class="user-avatar">
         <i class="fas fa-user"></i>
       </div>
-      <div class="user-menu" [class.show]="showUserMenu">
+      <div class="user-menu" [class.show]="showUserMenu" *ngIf="user$ | async as user">
         <div class="user-info">
-          <div class="user-name">{{ userName }}</div>
-          <div class="user-email">userEmail</div>
+          <div class="user-name">{{ user?.name }}</div>
+          <div class="user-email">{{ user?.email }}</div>
         </div>
         <div class="menu-divider"></div>
         <a href="#" class="menu-item">
@@ -34,7 +34,7 @@
           <span>Settings</span>
         </a>
         <div class="menu-divider"></div>
-        <a href="#" class="menu-item text-danger">
+        <a href="#" class="menu-item text-danger" (click)="logout()">
           <i class="fas fa-sign-out-alt"></i>
           <span>Logout</span>
         </a>
