--- a/src/app/features/layout/sidebar/sidebar.html
+++ b/src/app/features/layout/sidebar/sidebar.html
@@ -30,7 +30,7 @@
       </a>
       <ul class="submenu" [class.open]="isUserSubmenuOpen">
         <li>
-          <a routerLink="/utilisateurs/liste" [class.active]="isActive('utilisateurs/liste')">
+          <a routerLink="/workers" [class.active]="isActive('workers')">
             <i class="fas fa-list"></i>
             <span *ngIf="!isCollapsed">Liste des Employés</span>
           </a>
