--- a/src/app/features/mission-management/mission-management.scss
+++ b/src/app/features/mission-management/mission-management.scss
@@ -101,6 +101,7 @@
       &.btn-approve { background-color: #28a745; }
       &.btn-refuse { background-color: #dc3545; }
       &.btn-view { background-color: #17a2b8; }
+      &.btn-print { background-color: #6c757d; }
     }
   }
 }
