--- a/src/app/features/layout/sidebar/sidebar.html
+++ b/src/app/features/layout/sidebar/sidebar.html
@@ -35,12 +35,24 @@
             <span *ngIf="!isCollapsed">Ordre de mission</span>
           </a>
         </li>
+        <li class="nav-item" *ngIf="isSecretaire">
+          <a class="nav-link" routerLink="/demande-avance" routerLinkActive="active">
+            <i class="fa fa-money-bill-wave text-dark"></i>
+            <span class="sidenav-normal"> Demande d'Avance </span>
+          </a>
+        </li>
       </ul>
     </li>
     <li>
       <a routerLink="/conges" [class.active]="isActive('conges')">
         <i class="fas fa-calendar-alt"></i>
         <span *ngIf="!isCollapsed">Demandes de congé</span>
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/avances-management" routerLinkActive="active">
+        <i class="fa fa-money-bill-wave text"></i>
+        <span class="sidenav-normal"> Avances sur Salaires </span>
       </a>
     </li>
     <li>
